<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UNDER</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>
    <string name="from">De :</string>
    <string name="from_gps">Départ (Position GPS actuelle)</string>
    <string name="to">Arrivée</string>
    <string name="to_gps">A : Position GPS actuelle</string>
    <string name="offline_mode_disabled">Mode hors-ligne désactivé</string>
    <string name="offline_mode_enabled">Mode hors-ligne activé</string>
    <string name="search">Rechercher</string>
    <string name="quickest">Le plus rapide</string>
    <string name="less_correspondance">Le moins de correspondances</string>
    <string name="less_walking">Le moins de marche</string>
    <string name="alternative">Itinéraire alternatif</string>
    <string name="now">Maintenant</string>
    <string name="no_predictions">On a encore rien trouvé !</string>
    <string name="google_api_subway_station">subway_station</string>
    <string name="google_api_rer_station">train_station</string>
    <string name="arrival">Arrivée :\u0020</string>
    <string name="departure">Départ :\u0020</string>
    <string name="with">avec</string>
    <string name="title_activity_suggested_itinaries">Itinéraires</string>
    <string name="rapid">Le + rapide</string>
    <string name="navitia_api_rapid">rapid</string>
    <string name="comfort">Le + comfortable</string>
    <string name="navitia_api_healthy">healthy</string>
    <string name="healthy">Le + sain</string>
    <string name="navitia_api_comfort">comfort</string>
    <string name="navitia_api_walking">walking</string>
    <string name="navitia_api_public_transport">public_transport</string>
    <string name="suggested_itinaries_text_section">Résultats</string>
    <string name="suggested_itinaries_map_section">Carte</string>

    <string name="description_titre">UNDER</string>
    <string name="description">UNDER est la première application à calculer votre itinéraire optimal et réunir toute l\'information sur votre trajet en incluant les correspondances et les sorties, le tout via une interface simple et intuitive.</string>

    <string name="intuitive_titre">Intuitive</string>
    <string name="intuitive">Pas besoin d\'être un geek pour utiliser UNDER ! Grâce à une interface épurée, la prise en main de l\'application se fait sans détour. « 3 clics, 1 trajet », telle est notre devise.</string>

    <string name="performante_titre">Performante</string>
    <string name="performante">Des algorithmes optimisés, de puissants serveurs et une application allégée sont à la base de la planification UNDER. Fini le lag des transports !</string>

    <string name="esthetique_titre">Esthétique</string>
    <string name="esthetique">Planifier sur UNDER, c\'est joindre l\'utile à l\'agréable. L\'application arbore un design sobre et fluide, conforme au guide de développement Android de Google.</string>

    <string name="sorties_correspondances_titre">Sorties et correspondances</string>
    <string name="sorties_correspondances">Grâce à la base de données la plus complète du marché, UNDER est capable de vous orienter avec précision tout au long de votre trajet en vous indiquant quelles sorties prendre et où vous placer dans le métro.</string>

    <string name="hors_ligne_titre">Un mode hors-ligne</string>
    <string name="hors_ligne">Marre de ne pas capter dans le métro ? UNDER est aussi faite pour fonctionner même au plus profond de la ville grâce à son mode hors-ligne unique en son genre !</string>

    <string name="itineraire_optimal_titre">Un itinéraire optimal</string>
    <string name="itineraire_optimal">Basée sur des technologies Open Source de pointe au niveau mondial pour la planification d\'itinéraires multi-modaux, UNDER vous garantit le meilleur choix d\'itinéraire pour tous vos trajets.</string>

    <string name="equipe_titre">Notre équipe</string>
    <string name="equipe">Issue des meilleures écoles d\'ingénieur françaises et européennes, notre équipe est constituée de jeunes entrepreneurs urbains passionnés de nouvelles technologies. Notre but ? Rendre la planification de vos trajets plus facile et plus complète que jamais !</string>
</resources>
