<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ratp="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/normal_mode_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/background_gray">

        <RelativeLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/destination_container"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/up_sep_height"
                    android:background="@color/separator_gray"
                    android:layout_gravity="center_horizontal"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/destination_from_container"
                    android:padding="@dimen/destination_padding"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_from"
                        android:id="@+id/ic_from"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_gps"
                        android:textColorHint="@color/txt_gray"
                        android:id="@+id/destination_from_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_size"
                        android:background="@color/white"
                        android:layout_marginLeft="@dimen/destination_ic_space"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <View
                        android:layout_width="@dimen/div_width"
                        android:layout_height="@dimen/div_height"
                        android:background="@color/separator_gray"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/destination_to_container"
                    android:padding="@dimen/destination_padding"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_to"
                        android:id="@+id/ic_to"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/to"
                        android:textColorHint="@color/txt_gray"
                        android:id="@+id/destination_to_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_size"
                        android:background="@color/white"
                        android:layout_marginLeft="@dimen/destination_ic_space"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/down_sep_height"
                    android:background="@color/separator_gray"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/destination_down_sep" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/date_container"
                android:layout_marginTop="@dimen/block_distance"
                android:layout_below="@id/destination_container"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/up_sep_height"
                    android:background="@color/separator_gray"
                    android:layout_gravity="center_horizontal"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/destination_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date"
                        android:id="@+id/ic_date"
                        android:layout_centerVertical="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/now"
                        android:id="@+id/date_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_size"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/ic_date"
                        android:layout_marginLeft="@dimen/destination_ic_space"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/down_sep_height"
                    android:background="@color/separator_gray"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_btn_container"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/block_distance"
                android:layout_below="@id/date_container"
                android:layout_centerHorizontal="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:textSize="@dimen/search_text_size"
                    android:paddingTop="@dimen/search_padding_top"
                    android:paddingBottom="@dimen/search_padding_top"
                    android:paddingLeft="@dimen/search_padding_left"
                    android:paddingRight="@dimen/search_padding_left"
                    android:background="@color/red"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/down_sep_height"
                    android:background="@color/dark_red"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/edit_mode_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/form_field_height"
        android:visibility="invisible"
        android:alpha="0">

    </FrameLayout>

</FrameLayout>
